--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "php": "^7.1.3",
         "doctrine/dbal": "^2.9",
         "fideloper/proxy": "^4.0",
+        "ghostff/dump5": "^2.0",
         "iatstuti/laravel-cascade-soft-deletes": "^1.5",
         "laravel/framework": "5.7.*",
         "laravel/tinker": "^1.0",
