--- a/.env
+++ b/.env
@@ -9,11 +9,11 @@ APP_OWNER_URL=http://sirwojciechvojas.my-board.org
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
-DB_HOST=localhost
+DB_HOST='eu-cdbr-west-03.cleardb.net'
 DB_PORT=3306
-DB_DATABASE=homestead
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=heroku_13b2b4b8a6f0d1e
+DB_USERNAME=b0ec5f51ae4dbf
+DB_PASSWORD=a7f32ea6
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
