--- a/.env.heroku
+++ b/.env.heroku
@@ -1,5 +1,5 @@
 APP_NAME=Formularze_Tutteja
-APP_ENV=production
+APP_ENV=local
 APP_KEY=base64:P3LoQ4GbefzgQj6COjMSh3UgCTYJaSZKDGwabD4x1nE=
 APP_DEBUG=true
 APP_URL=http://tuttiform.mydiscussion.net
