--- a/.env.local
+++ b/.env.local
@@ -1,5 +1,5 @@
 APP_NAME=Formularze_Tutteja
-APP_ENV=production
+APP_ENV=local
 APP_KEY=base64:P3LoQ4GbefzgQj6COjMSh3UgCTYJaSZKDGwabD4x1nE=
 APP_DEBUG=true
 APP_URL=http://tuttiform.mydiscussion.net
@@ -9,11 +9,11 @@ APP_OWNER_URL=http://sirwojciechvojas.my-board.org
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
-DB_HOST='eu-cdbr-west-03.cleardb.net'
+DB_HOST=localhost
 DB_PORT=3306
-DB_DATABASE=heroku_13b2b4b8a6f0d1e
-DB_USERNAME=b0ec5f51ae4dbf
-DB_PASSWORD=a7f32ea6
+DB_DATABASE=homestead
+DB_USERNAME=root
+DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
