--- a/.env.example2
+++ b/.env.example2
@@ -1,19 +1,19 @@
-APP_NAME=Formularze_Tutteja
-APP_ENV=production
-APP_KEY=base64:P3LoQ4GbefzgQj6COjMSh3UgCTYJaSZKDGwabD4x1nE=
+APP_NAME=LaraForm
+APP_ENV=local
+APP_KEY=
 APP_DEBUG=true
-APP_URL=http://tuttiform.mydiscussion.net
-APP_OWNER=DreamV-Studio
-APP_OWNER_URL=http://sirwojciechvojas.my-board.org
+APP_URL=http://localhost
+APP_OWNER=
+APP_OWNER_URL=
 
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
-DB_HOST='eu-cdbr-west-03.cleardb.net'
+DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=heroku_13b2b4b8a6f0d1e
-DB_USERNAME=b0ec5f51ae4dbf
-DB_PASSWORD=a7f32ea6
+DB_DATABASE=homestead
+DB_USERNAME=homestead
+DB_PASSWORD=secret
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -26,8 +26,8 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_DRIVER=smtp
-MAIL_HOST=smtp.gmail.com
-MAIL_PORT=587
+MAIL_HOST=smtp.mailtrap.io
+MAIL_PORT=2525
 MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
