--- a/.env.local
+++ b/.env.local
@@ -1,8 +1,8 @@
 APP_NAME=Formularze_Tutteja
 APP_ENV=local
-APP_KEY=base64:P3LoQ4GbefzgQj6COjMSh3UgCTYJaSZKDGwabD4x1nE=
+APP_KEY=base64:3FXFP9QFKewKc27PYv4Mu8C61HULfcqY1ZPJDdfn01Y=
 APP_DEBUG=true
-APP_URL=http://tuttiform.mydiscussion.net
+APP_URL=https://loocalhost
 APP_OWNER=DreamV-Studio
 APP_OWNER_URL=http://sirwojciechvojas.my-board.org
 
